--- a/step/step_05_js/responsive_01.html
+++ b/step/step_05_js/responsive_01.html
@@ -44,7 +44,11 @@
 		</ul>
 	</nav>
 	<div id="content"></div>
-	<div id="footBox"></div>
+	<div id="footBox" role="contentinfo">
+		<adress>
+			<p><strong>tel:</strong> +82 00 111 222 <i aria-hidden="true"> | <strong>mail:</strong> mail@mail.com</p>
+		</adress>
+	</div>
 	</header>
 	</div>
 </body>
