resume / 서울아산병원 업데이트

--- a/subject/seoul_asan_hospital/seoul_asan_hospital.html
+++ b/subject/seoul_asan_hospital/seoul_asan_hospital.html
@@ -94,11 +94,36 @@
 					</div>
 				</div>
 				<div class="col_rightBox">
-					<div class="right_textBox">
+					<div class="introBox">
 						<p>Doctor</p>
-						<p></p>
-						<p></p>
+						<p>강승철 교수님</p>
+						<p>소아 청소년 정형외과</p>
+						<h6>프로필</h6>
+						<p>		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore facilis enim delectus mollitia similique omnis fugiat, amet aliquam repellendus neque iure soluta nam reprehenderit nulla quibusdam ratione necessitatibus tempore ipsam! Quisquam repellat perspiciatis temporibus deserunt consequatur ex dignissimos dicta, tempora dolorum voluptatibus similique alias cumque earum fugiat esse reiciendis neque voluptatem eos ut ducimus! Cupiditate ipsum corporis sapiente est repellendus.
+						</p>
 					</div>
+					</div>
+		</section>
+
+		<section class="clientSay">
+				<div class="left_side">
+					<div><span class="hidden">img</span></div>
+					<div>
+					<h6>고객의 소리</h6>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo eveniet atque voluptatibus nesciunt consequuntur nostrum.</p>
+					</div>
+				</div>
+				<div class="right_side">
+					<div class="clientBox">
+						<div class="client_img">img</div>
+						<div class="client_text">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, tempora, minima? Laboriosam et, dolores ab aliquid facilis iusto cumque cupiditate ad rerum. Ipsa similique id minima consequuntur, minus, enim optio.</p>
+						</div>
+					</div>
+				</div>
+			
+		</section>
+
 				</div>
 		</section>
 	
