서울아산)메인페이지 작업 및 gulp test

--- a/portfolio/seoul_asan_hospital/mainpage.html
+++ b/portfolio/seoul_asan_hospital/mainpage.html
@@ -44,11 +44,34 @@
 		<button type="button" id="menu"><i class="fa fa-bars" aria-hidden="true"><span class="hidden">메뉴</span></i></button>
 		<button type="button" id="home"><a href=""><i class="fa fa-home" aria-hidden="true"><span class="hidden">홈</span></i></a></button>
 	</header>
-	<nav id="navi"></nav>
+	<nav id="navi">
+		<ul>
+			<li>진료안내
+			<li>병원이용안내
+			<li>진료과ㆍ의료진</li>
+			<li>예약ㆍ조회ㆍ발급</li>
+			<li>고객서비스</li>
+			<li>의학교육</li>
+			<li>건강정보</li>
+			<li>병원소개</li>
+		</ul>
+	</nav>
 	<section id="addBanner">
 		<h2>
-		서울아산병원 10년연속
+		<p>ALL</p>
+		<p>STAR</p>
+		<p>서울아산병원 10년연속</p>
+		<p>존경받는 병원 1위</p>
 		</h2>
+		<h3>
+		<p>세계적 고난도 수술성과</p>
+		<p>높이 평가 받은 결과</p>
+		<p>30대 기업(ALL STAR)에도</p>
+		<p>3년 연속 선정</p>
+		</h3>
+		<h4>
+		<a href="#">자세히보기</a>
+		</h4>
 		<div class="whiteBox">
 		<div class="textBanner">
 			
@@ -56,12 +79,48 @@
 		</div>
 	</section>
 	<article id="content_01">
-		<div class="textBox_01"></div>
+		<div class="textBox_01">
+			<h2>
+				우리의약속
+			</h2>
+			<h3>
+				<p>서울 아산병원은 언제나 당신 곁에서,</p>
+				<p>더 큰 사랑의 실천을 위해,끊임없이 헌신합니다.</p>
+			</h3>
+		</div>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>
+				<div class="icon_01"></div>
+				<div>진료예약</div>
+				<div>
+				<p>쉽고 빠른 온라인</p>
+				<p>온라인 진료예약</p>
+				</div>
+			</li>
+			<li>
+				<div class="icon_02"></div>
+				<div>예약조회</div>
+				<div>
+				<p>예약,날짜 및 시간</p>
+				<p>이력을 확인하세요</p>
+				</div>
+			</li>
+			<li>
+				<div class="icon_03"></div>
+				<div>의료진</div>
+				<div>
+				<p>더 큰 사랑을 실천하는</p>
+				<p>전문의료진</p>
+				</div>
+			</li>
+			<li>
+				<div class="icon_04"></div>
+				<div>진료과</div>
+				<div>
+				<p>전문 분야별</p>
+				<p>진료과 안내</p>
+				</div>
+			</li>
 		</ul>
 	</article>
 	<article id="content_02">
