2016-11-16 Fender menu완성 및 서울아산병원 메인페이지 작업

--- a/fender/fender/index.html
+++ b/fender/fender/index.html
@@ -16,12 +16,7 @@
 	<div class="content">
 		<header id="headBox">
 			<h1 id="topBtn"><a href="#"><span class="hidden">main</span></a></h1>
-
-			<!-- <div id="menu"> -->
-				<!-- <button type="button"></button> -->
-				<!-- <a href="#allBox">top</a> -->
-			<!-- </div> -->
-			<div id="menu_02">
+			<button type=button id="menu_02">
 				<ul class="menuSmall_01">
 				<li></li>
 				<li></li>
@@ -38,7 +33,7 @@
 				<li></li>
 				<li></li>
 				</ul>
-			</div>
+			</button>
 		</header>
 	<div id="mnb">
 		<div class="mnbBox">
@@ -48,13 +43,15 @@
 			</div>
 			<div class="mnbTextBox">
 				<ul class="mnbTextUl">
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li class="mnbHome"></li>
+					<li class="mnbProduct"></li>
+					<li class="mnbVideo"></li>
+					<li class="mnbAbout"></li>
+					<li class="mnbContact"></li>
 				</ul>
-			</div>	
+			</div>
+			<button type="button" class="close">
+			</button>	
 			<div class="mnbUnderBox">
 				<ul>
 					<li><i class="fa fa-facebook" aria-hidden="true"></i></li>
@@ -116,8 +113,9 @@
 		</ul>
 	</div>//
 <!-- jQuery -->
-	<script src="js/src/scroll_page_01.js"></script>
-	<script src="js/src/pagexy_01.js"></script>
-	<script src="js/src/show_up.js"></script>
+	<script src="./js/src/menu.js"></script>
+	<script src="./js/src/scroll_page_01.js"></script>
+	<script src="./js/src/pagexy_01.js"></script>
+	<script src="./js/src/show_up.js"></script>
 </body>
 </html>
