2016-11-20 Fender Team vw

--- a/fender/fender/index.html
+++ b/fender/fender/index.html
@@ -68,7 +68,7 @@
 				<li><a href="#bodyBox"><span class="hidden">bodyBox</span></a></li>
 				<li><a href="#neckBox"><span class="hidden">neckBox</span></a></li>
 				<li><a href="#elecBox"><span class="hidden">elecBox</span></a></li>
-				<li><a href="#hardBox"><span class="hidden">hardBox</span></a></li>
+				<li><a href="#hardwareBox"><span class="hidden">hardBox</span></a></li>
 			</ul>
 		</nav><!-- snb-->
 		
@@ -95,15 +95,36 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus beatae, sed ab. Expedita qui deleniti laborum facilis, cupiditate adipisci ea, eos id quaerat quis. Iusto suscipit dolore veniam earum, doloremque consequatur necessitatibus illo, provident fuga, soluta aliquam. Harum tempora natus veniam labore beatae libero mollitia suscipit unde vero maiores adipisci fugiat sit, necessitatibus, facere </p>
 		</article>
 		<article id="neckBox" class="wheel_area"><h2>neckBox</h2>
-			<img src="./img/cars/car" alt="">
-			<img src="./img/cars/car" alt="">
-			<img src="./img/cars/car" alt="">
-			<img src="./img/cars/car" alt="">
-			<img src="./img/cars/car" alt="">
 		</article>
-		<article id="elecBox" class="wheel_area"><h2>elecBox</h2></article>
-		<article id="hardBox" class="wheel_area"><h2>hardBox</h2></article>
-		<footer id="footer"><h2>footer</h2></footer>
+		<article id="elecBox" class="wheel_area"><h2>elecBox</h2>
+		</article>
+		<article id="hardwareBox">
+			<h2 id="hardTitleBox"></h2>
+
+			<div id="hardTextBox">
+			  <dl><img src="img/bridge.png" alt="">
+			  	<dt>Bridge</dt>
+			  	<dd>6-Saddie Standard Strings</dd>
+			  </dl>
+			  <dl><img src="img/tuning.png" alt="">
+			  	<dt>Tuning Machines</dt>
+			  	<dd>Standard Cast/Sealed</dd>
+			  </dl>
+			  <dl><img src="img/orientation.png" alt="">
+			  	<dt>Orientation</dt>
+			  	<dd>Left-Hand</dd>
+			  </dl>
+			  <dl><img src="img/pickguard.png" alt="">
+			  	<dt>Pickguard</dt>
+			  	<dd>3-Play Parchment</dd>
+			  </dl>
+			  <dl><img src="img/knobs.png" alt="">
+			  	<dt>Control Knobs</dt>
+			  	<dd>Knurled Flat-Top</dd>
+			  </dl>
+			</div>
+		</article>
+
 	</div>
 	<div id="scrollDown">
 		<span>Scroll down</span>
@@ -112,7 +133,7 @@
 			<li><i class="fa fa-caret-down" aria-hidden="true"></i></li>
 			<li><i class="fa fa-caret-down" aria-hidden="true"></i></li>
 		</ul>
-	</div>//
+	</div>
 <!-- jQuery -->
 	<script src="./js/src/menu.js"></script>
 	<script src="./js/src/scroll_page_01.js"></script>
