--- a/fender/fender/neck.html
+++ b/fender/fender/neck.html
@@ -39,28 +39,28 @@
 
 			<div id="neckTextBox">
 			  <ul class="neckText_01">
-			  	<li>Material &#124; Shape &#124; Plate</li>
-			  	<li>Maple &#124; Modern C &#124; 4-Bolt Standard </li>
+			  	<li><span>Material &#124; Shape &#124; Plate</span></li>
+			  	<li><span>Maple &#124; Modern C &#124; 4-Bolt Standard</span> </li>
 			  </ul>
 			  <ul class="neckText_02">
-			  	<li>Neck Finish</li>
-			  	<li>Satin Urethane</li>
+			  	<li><span>Neck Finish</span></li>
+			  	<li><span>Satin Urethane</span></li>
 			  </ul>
 			  <ul class="neckText_03">
-			  	<li>Scale Length &#124; Position Lnlays</li>
-			  	<li>648mm &#124; Black Dot</li>
+			  	<li><span>Scale Length &#124; Position Lnlays</span></li>
+			  	<li><span>648mm &#124; Black Dot</span></li>
 			  </ul>
 			  <ul class="neckText_04">
-			  	<li>Fingerboard &#124; Radius</li>
-			  	<li>Maple &#124; 241mm</li>
+			  	<li><span>Fingerboard &#124; Radius</span></li>
+			  	<li><span>Maple &#124; 241mm</span></li>
 			  </ul>
 			  <ul class="neckText_05">
-			  	<li>Number of Frets &#124; Size</li>
-			  	<li>21 &#124; Medium Jumbo</li>
+			  	<li><span>Number of Frets &#124; Size</span></li>
+			  	<li><span>21 &#124; Medium Jumbo</span></li>
 			  </ul>
 			  <ul class="neckText_06">
-			  	<li>Nut Width &#124; String</li>
-			  	<li>42mm &#124; Synthetic Bone</li>
+			  	<li><span>Nut Width &#124; String</span></li>
+			  	<li><span>42mm &#124; Synthetic Bone</span></li>
 			  </ul>
 			</div>
 
@@ -72,6 +72,7 @@
 	</div>
 
 <!-- jQuery -->
+	<script src="./js/src/neck.js"></script>
 	<script src="./js/src/pagexy_01.js"></script>
 	<script src="./js/src/show_up.js"></script>
 </body>
