--- a/fender/fender/aboutus.html
+++ b/fender/fender/aboutus.html
@@ -42,11 +42,11 @@
 			</div>
 			<div class="mnbTextBox">
 				<ul class="mnbTextUl link">
-					<li class="mnbHome"><a href="index.html"></a></li>
+					<li class="mnbHome"><a href="./index.html"></a></li>
 					<li class="mnbProduct"><a href="./mainpage.html"></a></li>
 					<li class="mnbVideo"><a href="./video.html"><span>video_channel</span></a></li>
 					<li class="mnbAbout"><a href="./aboutus.html"></a></li>
-					<li class="mnbContact"></li>
+					<li class="mnbContact"><a href="./contact.html"></a></li>
 				</ul>
 			</div>
 			<button type="button" class="close">
@@ -61,8 +61,7 @@
 		</div>
 		</div> <!-- mnb -->
 		<article id="aboutBox">
-			<h2 id="aboutTitleBox"> 
-			</h2>
+			<h2 id="aboutTitleBox"></h2>
 
 			<div id="aboutTextBox">
 			  <p>"Fender Musical Instruments Corporation(FMIC) is the world's leading guitar<br> manufacturer, and its name has become synonymous with all things rock n roll."</p>
@@ -71,6 +70,8 @@
 		</article>
 	</div><!-- content -->
 
-	<script src="./js/src/menu.js"></script>	
+	<script src="./js/src/menu.js"></script>
+	<script src="./js/src/pagexy_01.js"></script>
+	<script src="./js/src/show_up.js"></script>
 </body>
 </html>
