--- a/fender/fender/mainpage.html
+++ b/fender/fender/mainpage.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./css/src/base.css" />
 	<link rel="stylesheet" href="./css/src/scroll_page.css" />
 	<link rel="stylesheet" href="./css/src/body.css" />
+	<link rel="stylesheet" href="./css/src/elec.css" />
 	<script src="js/jquery/jquery-1.12.4.min.js"></script>
 	<script src="js/jquery/jquery-ui.min.js"></script>
 	<title>Document</title>
@@ -166,9 +167,32 @@
 			</div>
 		</article><!-- neckBox -->
 		
-		<article id="elecBox" class="wheel_area">
-			<h2>elecBox</h2>
-		</article><!-- elecBox -->
+        <article id="elecBox">
+          <div class="elecName">
+              
+          </div>
+          <div class="elecText">
+              <ul>
+                  <li>
+                      <span>Neck Pickup</span>
+                      <div></div>
+                  </li>
+                  <li>
+                      <span>Bridge Pickup</span>
+                      <div></div>
+                  </li>
+                  <li>
+                      <span>Controls</span>
+                      <div></div>
+                  </li>
+                     
+                  <li>
+                      <span>Pickup Switching</span>
+                      <div></div>
+                  </li>
+              </ul>
+          </div>
+          </article>
 		
 		<article id="hardBox">
 		<div id="hardwareBox" class="wheel_area">
@@ -237,5 +261,6 @@
 	<script src="./js/src/pagexy_01.js"></script>
 	<script src="./js/src/body.js"></script>
 	<script src="./js/src/show_up.js"></script>
+	<script src="./js/src/elec.js"></script>
 <!-- 	<script src="./js/src/mousewheel_01.js"></script> -->
 </html>
